syntax = "proto3";

package auth;
option go_package = "contract/user/golang";

message SignInRequest {
  string telegramId = 1;
}

message SignInResponse {
  string id = 1;
  string token = 2;
}

message SignUpRequest {
  string phone = 1;
  string password = 2;
  string telegramId = 3;
}

message SignUpResponse {
  string id = 1;
  string token = 2;
}

service UserService {
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
}